# axum-template

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
macroses/: Cargo.toml
macroses/src/: lib.rs
src/: config.rs  main.rs  routes.rs  traicing.rs
src/errors/: auth.rs  mod.rs  users.rs
src/handlers/: auth.rs  users.rs
src/middlewares/: auth.rs  role.rs
src/models/: users.rs
src/repositories/: tokens.rs  users.rs
src/repository/: mod.rs  tokens.rs  users.rs
src/services/auth/: hashing.rs  mod.rs  tokens.rs
