[package]
name = "axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features=["macros"] }
futures = "0.3.32"
axum-extra = { version = "0.12.5", features=["cookie"] }
cfg-if = "1.0.0"
http = "1.3.1"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
sha2 = "0.11.0"
hex = "0.4.3"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
thiserror = "2.0.17"
dotenv = "0.15.0"
utoipa = { version="5.4.0", features=["uuid"] }
utoipa-swagger-ui = { version="9.0.2", features = ["axum"] }

macroses = { path = "macroses" }
